# cpp_cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: CMakeLists.txt  README.md
{{cookiecutter.project_name}}/src/: CMakeLists.txt
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: CMakeLists.txt  {{cookiecutter.project_name}}.cpp
{{cookiecutter.project_name}}/tests/: CMakeLists.txt
{{cookiecutter.project_name}}/tests/unittests/: CMakeLists.txt  {{cookiecutter.project_name}}_test.cpp
